Added new folders

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@canvasjs/react-charts": "^1.0.2",
     "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^2.9.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,13 +13,14 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.53.0",
     "date-fns": "^4.1.0",
-    "framer-motion": "^11.7.0",
+    "framer-motion": "^11.11.0",
     "papaparse": "^5.4.1",
     "plotly.js": "^2.35.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
