--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@canvasjs/react-charts": "^1.0.2",
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.9.4",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.10.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,6 +22,7 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
