--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "@chakra-ui/react": "^2.10.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.53.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.0",
+    "googleapis": "^144.0.0",
     "papaparse": "^5.4.1",
     "plotly.js": "^2.35.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
+    "react-google-sheets": "^0.4.0",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
